--- a/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
+++ b/ComeniusCarrousel/Admin/Decaan/DecaanOverzicht.cshtml
@@ -10,6 +10,25 @@
     List<Tuple<int, string>> decanen = DecaanRepo.GetDecanen(); // Geeft het ID en username van alle decanen mee
 }
 
+<ul class="nav nav-tabs">
+    <li><a href="~/">Home</a></li>
+    <li class="dropdown active">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Overzichten <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            @if (User.IsInRole("Admin"))
+            {
+                <li class="active"><a href="~/Admin/Decaan/DecaanOverzicht">Decaanoverzicht</a></li>
+            }
+            <li><a href="~/Decaan/Lokaal/LokaalOverzicht.cshtml">Lokaaloverzicht</a></li>
+            <li><a href="~/Decaan/Vak/VakOverzicht.cshtml">Vakkenoverzicht</a></li>
+            <li><a href="~/Decaan/Leraar/LeraarOverzicht.cshtml">Lerarenoverzicht</a></li>
+            <li><a href="~/Decaan/Mail/MailOverzicht.cshtml">E-mail overzicht</a></li>
+        </ul>
+    </li>
+</ul>
+
+<br>
+
 <a class="btn btn-default" href="~/Admin/Decaan/DecaanToevoegen">
     <span class="glyphicon glyphicon-pencil"></span> Nieuwe decaan aanmaken
 </a>
