Voorlichting Wijzigen en fixes

--- a/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakWijzigen.cshtml
@@ -23,10 +23,10 @@
 }
 
 @Html.ValidationSummary()
-@if (lokaal != null)
+@if (vak != null)
 {
     <p>
-        <span>Lokaal:</span>
+        <span>Vak:</span>
         <span>@vak.VakNaam</span>
     </p>
     <form method="post" class="form-inline">
