--- a/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
+++ b/ComeniusCarrousel/Decaan/Voorlichting/VoorlichtingOverzicht.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Lokaal overzicht";
+    Page.Title = "Voorlichting overzicht";
 
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
