--- a/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Vak overzicht";
+    Page.Title = "Vak toevoegen";
 
     if (!User.IsInRole("Admin") && !User.IsInRole("Decaan"))
     {
