--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -129,9 +129,9 @@
                 </div>
                 <div id="floatRight">
                     <ul style="list-style-type:none">
-                        <li><a href="http://google.com" style="color: #fff">Link 1</a></li>
-                        <li><a href="http://google.com" style="color: #fff">Link 2</a></li>
-                        <li><a href="http://google.com" style="color: #fff">Link 3</a></li>
+                        <li><a href="http://www.csg-comenius.nl/" style="color: #fff">www.csg-comenius.nl</a></li>
+                        <li><a href="http://www.google.com" style="color: #fff">Link 2</a></li>
+                        <li><a href="http://www.google.com" style="color: #fff">Link 3</a></li>
                     </ul>
                 </div>
             </div>
