--- a/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Leraar/LeraarToevoegen.cshtml
@@ -108,6 +108,8 @@
                 <input type="password" id="confirmPassword" name="confirmPassword" value="@confirmPassword" class="form-control">
                 @Html.ValidationMessage("confirmPassword")
             </div>
+            <div>
+            <label>Selecteer te geven vak</label>
             <select name="vak">
                 <option value="-"></option>
                 @foreach(VakRepo.Vak v in vakken) // maakt een keuzemenu met alle mogelijke vakken
@@ -115,6 +117,7 @@
                     <option value="@v.VakNaam">@v.VakNaam</option>
                 }
             </select>
+            </div>
             <div class="from-group">
                 <button type="submit" class="btn btn-default">Registreer</button>
             </div>
