--- a/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
-   Layout = "~/_Layout.cshtml";
-    Page.Title = "Register";
-    Page.Description = "Add an account";
-    Page.ShowTitle = "false";
+    Layout = "~/_Layout.cshtml";
+    Page.Title = "Leerling toevoegen";
 
     if (!User.IsInRole("Admin"))
     {
