--- a/ComeniusCarrousel/App_Code/Repository.cshtml
+++ b/ComeniusCarrousel/App_Code/Repository.cshtml
@@ -6,4 +6,25 @@
             db.Close();
         }
     }
+
+    public static List<string> SplitLeerlingen(string leerlingInvoer, List<string> leerlingen)
+    {
+        string leerling = leerlingInvoer.Substring(0, leerlingInvoer.IndexOf("\n"));
+        leerlingen.Add(leerling);
+        if (leerlingInvoer.Contains("\n"))
+        {
+            leerlingInvoer = leerlingInvoer.Remove(0, leerlingInvoer.IndexOf("\n") + 2);
+        }
+        else
+        {
+            return leerlingen;
+        }
+        SplitLeerlingen(leerlingInvoer, leerlingen);
+        return leerlingen;
+    }
+
+    public static List<Tuple<string,string,int,string,string,string,string,bool>> SplitLeerling(string leerling)
+    {
+        return null;
+    }
 }
