--- a/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
+++ b/ComeniusCarrousel/Admin/Leerling/LeerlingToevoegen.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "~/_Layout.cshtml";
-    Page.Title = "Leerling Toevoegen";
+    Page.Title = "Leerling toevoegen";
 
     if (!User.IsInRole("Admin"))
     {
