--- a/ComeniusCarrousel/Leerling/_Leerling.cshtml
+++ b/ComeniusCarrousel/Leerling/_Leerling.cshtml
@@ -5,6 +5,6 @@
 
 @RenderPage("~/Leerling/_LeerlingDetails.cshtml")
 
-<a href="~/Leerling/Keuze" class="btn btn-default" role="button">
+<a href="~/Leerling/Keuze" class="btn btn-default" role="button" id="floatRight">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Voer keuzevakken in
 </a>
