--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -119,7 +119,7 @@
     }
 }
 
-<h4>Vul hier uw keuzes in.</h4>
+<h4>&nbsp; Vul hier je keuzevakken in.</h4>
 @Html.ValidationSummary()
 <form method="post" class="form-inline">
     <table class="table" id="table-nostripes">
@@ -153,8 +153,10 @@
             </tr>
         }
     </table>
-    <input type="text" name="mailVerzorger" placeholder="voorbeeld@mail.frl" value="@leerling.MailVerzorger" class="form-control"> <span>Mail van je ouder/verzorger</span> <br>
-    <button type="submit" id="submit" name="submitKeuze" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Verzenden
+    <span>Mail van je ouder/verzorger</span> 
+    </br>
+    <input type="text" name="mailVerzorger" placeholder="voorbeeld@mail.frl" value="@leerling.MailVerzorger" class="form-control" style="width: 100%; margin-top: 8px;">
+    <button type="submit" id="submit" name="submitKeuze" class="btn btn-success" style="float: right; margin-top: 16px;">
+        <span class="glyphicon glyphicon-ok"></span>&nbsp; Verzenden
     </button>
 </form>
